tests/lit/syntax/initassign.silly
// RUN: %Not %ExeSilly -g %s -o %t.exe 2>&1 | %FileCheck %s
// CHECK: initassign.silly:4:12: error: parse error: mismatched input '=' expecting ';'

INT32 s{3} = 4;
